--- a/components/sixteencolors.style.less
+++ b/components/sixteencolors.style.less
@@ -3,7 +3,6 @@
 
 @import "/node_modules/vuetify/dist/vuetify.min.css";
 @import "/node_modules/material-design-icons/iconfont/material-icons.css";
-@import url('https://fonts.googleapis.com/css?family=Gaegu:700|Titillium+Web');
 
 // Global Web Fonts
 
@@ -23,9 +22,15 @@ body {
     background-color: @background;
 }
 
+.toolbar__content img {
+    margin-top: 40px;
+    height: 100px;
+    width: auto;
+}
+
 #header {
     margin: 0;
 }
 #footer {
-    margin: 0;
+    margin: 15px;
 }
