Added Artists and Groups. Corrected some component properties.

--- a/components/sixteencolors.style.less
+++ b/components/sixteencolors.style.less
@@ -1,19 +1,18 @@
 
-// Style Imports
+// SixteenColors Style Imports
 
 @import "/node_modules/vuetify/dist/vuetify.min.css";
 @import "/node_modules/material-design-icons/iconfont/material-icons.css";
 
-// Global Web Fonts
+// SixteenColors Global Web Fonts
 
 @Gaegu: 'Gaegu', cursive;
 @Titillium: 'Titillium Web', sans-serif;
 
-// Global Colors
+// SixteenColors Global Colors
 
 @background: grey;
 
-// Markup Modifications
 
 html {
     background-color: @background;
