Basic support for dos web fonts.

--- a/components/sixteencolors.layout.pug
+++ b/components/sixteencolors.layout.pug
@@ -32,7 +32,7 @@ html(lang="en")
 
             #footer
 
-                v-footer(dark float).black
+                v-footer(dark fixed height="64").black
                     
                     v-spacer
 
