--- a/components/sixteencolors.style.less
+++ b/components/sixteencolors.style.less
@@ -6,8 +6,54 @@
 
 // SixteenColors Global Web Fonts
 
-@Gaegu: 'Gaegu', cursive;
-@Titillium: 'Titillium Web', sans-serif;
+@font-face {
+    font-family: '8x16';
+    src: url('/assets/fonts/dos437-webfont.woff');
+    src: local('Ã¢ËœÂº'), url('/assets/fonts/dos437-webfont.woff') format('woff'), url('/assets/fonts/dos437-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  @dos-font: '8x16' !important;
+  
+  .dos-smallest {
+    font-family: @dos-font;
+    font-size: 6pt;
+  }
+  
+  .dos-smaller {
+    font-family: @dos-font;
+    font-size: smaller;
+  }
+  .dos-small {
+    font-family: @dos-font;
+    font-size: small;
+  }
+  
+  .dos-medium {
+    font-family: @dos-font;
+    font-size: medium;
+  }
+  
+  .dos-large {
+    font-family: @dos-font;
+    font-size: large;
+  }
+  
+  .dos-larger {
+    font-family: @dos-font;
+    font-size: larger;
+  }
+  
+  .dos-logo {
+    font-family: @dos-font;
+    font-size: 10pt;
+  }
+  
+  .dos-title {
+    font-family: @dos-font;
+    font-size: 1pt;
+  }
 
 // SixteenColors Global Colors
 
@@ -16,6 +62,7 @@
 
 html {
     background-color: @background;
+    min-width: 480px;
 }
 body {
     background-color: @background;
