Don't have the fonts working just yet but getting there...

--- a/components/sixteencolors.layout.pug
+++ b/components/sixteencolors.layout.pug
@@ -36,7 +36,7 @@ html(lang="en")
                     
                     v-spacer
 
-                    div &copy; #{ new Date().getFullYear() }
+                    div.white &copy; #{ new Date().getFullYear() }
 
 
         block component
