--- a/components/sixteencolors.style.less
+++ b/components/sixteencolors.style.less
@@ -5,60 +5,19 @@
 @import "/node_modules/material-design-icons/iconfont/material-icons.css";
 
 // SixteenColors Global Web Fonts
-
-@font-face {
-    font-family: '8x16';
+  
+.btn(@size: small) {
+    font-family: "8x16";
     src: url('/assets/fonts/dos437-webfont.woff');
     src: local('Ã¢ËœÂº'), url('/assets/fonts/dos437-webfont.woff') format('woff'), url('/assets/fonts/dos437-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-  }
-  
-  @dos-font: '8x16' !important;
-  
-  .dos-smallest {
-    font-family: @dos-font;
-    font-size: 6pt;
-  }
-  
-  .dos-smaller {
-    font-family: @dos-font;
-    font-size: smaller;
-  }
-  .dos-small {
-    font-family: @dos-font;
-    font-size: small;
-  }
-  
-  .dos-medium {
-    font-family: @dos-font;
-    font-size: medium;
-  }
-  
-  .dos-large {
-    font-family: @dos-font;
-    font-size: large;
-  }
-  
-  .dos-larger {
-    font-family: @dos-font;
-    font-size: larger;
-  }
-  
-  .dos-logo {
-    font-family: @dos-font;
-    font-size: 10pt;
-  }
-  
-  .dos-title {
-    font-family: @dos-font;
-    font-size: 1pt;
-  }
+    font-size: @size;
+}
 
 // SixteenColors Global Colors
 
 @background: grey;
-
 
 html {
     background-color: @background;
@@ -77,6 +36,7 @@ body {
 #header {
     margin: 0;
 }
+
 #footer {
-    margin: 15px;
+    margin: 0;
 }
