Made logo linkable to index.

--- a/components/sixteencolors.layout.pug
+++ b/components/sixteencolors.layout.pug
@@ -19,7 +19,8 @@ html(lang="en")
 
                 v-toolbar(dark extended fluid).black
 
-                    img(src="/assets/images/sixteencolors-logo-small.png")
+                    a(href="/index")
+                        img(src="/assets/images/sixteencolors-logo-small.png")
                     
                     v-spacer
                     
