White text for footer content (for now).

--- a/components/sixteencolors.layout.pug
+++ b/components/sixteencolors.layout.pug
@@ -37,7 +37,7 @@ html(lang="en")
                     
                     v-spacer
 
-                    div.white &copy; #{ new Date().getFullYear() }
+                    div.white--text &copy; #{ new Date().getFullYear() } SixteenColors Ansi &amp; Ascii Artwork Archive
 
 
         block component
