--- a/components/sixteencolors.layout.pug
+++ b/components/sixteencolors.layout.pug
@@ -37,7 +37,7 @@ html(lang="en")
                     
                     v-spacer
 
-                    div.white--text (c) 2004 - #{ new Date().getFullYear() } SixteenColors
+                    div.white--text (c) #{ new Date().getFullYear() } SixteenColors
 
 
         block component
